// Generated by FunAPI app_proto_generator.  DO NOT EDIT!
//
// source: giving_tree_client_messages.proto
//         giving_tree_server_messages.proto


import "funapi_client/account_messages.proto";
import "giving_tree_client_messages.proto";
import "giving_tree_server_messages.proto";


message ClientAppMessageType {
  enum Type {
    kPlayerRegisterName = 1001;
    kPlayerTakeApple = 1002;
    kPlayerGiveApples = 1003;
    kAccountSendTalk = 1004;
  }
}


extend ClientAppMessage {
  optional ClientAppMessageType.Type client_message_type = 1000;

  optional PlayerRegisterName player_register_name = 1001;
  optional PlayerTakeApple player_take_apple = 1002;
  optional PlayerGiveApples player_give_apples = 1003;
  optional AccountSendTalk account_send_talk = 1004;
}


message ServerAppMessageType {
  enum Type {
    kAccountReceiveTalk = 1001;
    kAccountSendTalkResponse = 1002;
  }
}


extend ServerAppMessage {
  optional ServerAppMessageType.Type server_message_type = 1000;

  optional AccountReceiveTalk account_receive_talk = 1001;
  optional AccountSendTalkResponse account_send_talk_response = 1002;
}
